png++-0.1.1	07 Apr 2007
	Added appropriate copyright notices.

png++-0.1.0	04 Feb 2007
	Initial release.