@@ -12,5 +12,5 @@
 + make sure all headers compile on their own
 + add compilation dependency detection
 + add pixel_buffer/image::operator[]
-- improve docs and README
++ improve docs and README
 + endianness in expand_8_to_16()
